Tue Jan  7 18:11:24 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* ports.h (SCM_PTOBNUM): Removed extraneous semicolon.
	* smob.h: (SCM_PTOBNUM): Removed entirely; this definition is a
	duplicate.

	* objprop.c (scm_object_property): No need to take the CDR of the
	value returned by scm_object_properties, since Aug 20 change.

	* configure.in: When checking for struct linger, #include
	<sys/types.h> as well as <sys/socket.h>.  I've never known
	<sys/types.h> to cause any portability problems, and Solaris's
	<sys/socket.h> needs it.
	* configure: Rebuilt.

	I think the Sun compiler has chosen a perverse way to interpret
	ANSI declarations combined with K&R definitions.  We'll
	appease it a little bit.  But when it invades France, we fight.
	* print.c (scm_iprlist): Change 'tlr' argument to an int.
	* print.h (scm_iprlist): Here too.
	* numbers.c (scm_divbigdig): Change definition to match
	declaration in numbers.h.
	* unif.c (scm_makflo): Change definition to match declaration in
	unif.h.

	* init.c (scm_boot_guile): Don't return the value of
	scm_boot_guile_1.  This function doesn't return a value;
	scm_boot_guile_1 doesn't return a value (or return at all).

	* eval.c (unmemocopy): Add a semicolon to appease the Sun
	compiler.

	* simpos.c (SYSTNAME): Add case for AIX; otherwise it won't
 	compile.  I have a feeling this function is a bad idea anyway ---
 	one should always test for features, not systems.

	* smob.h (SCM_SMOBNUM, SCM_PTOBNUM): Remove extraneous
	semicolons.  Only pure luck kept this from being noticed earlier.

Tue Jan  7 15:04:06 1997  Mikael Djurfeldt  <mdj@kenneth>

	* socket.c (scm_recvfrom): Added missing semicolon.

Mon Jan  6 20:39:08 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* socket.c (scm_recvfrom): allow buff_or_size to be a list containing
	the buffer and start and end positions for SCSH networking
	implementation.

Sun Jan  5 13:53:53 1997  Jim Blandy  <jimb@floss.cyclic.com>
